# phd

./: .gitattributes  .gitignore  .gitmodules  KeyboardController.py  LICENSE  README.md  RobotControl.py  centerline.sh  config.ini  environment.yml  environment_windows.yml  loaded_state.txt  main.py  navigation.py  note.md  notes.txt  set_FS_frame.py  visualize_3d.py
1dof_robot/: color_detection_test.py  force_test.asv  force_test.m  get_models_from_data.m  image_processing.py  main.py  shape_optimization.m  sofa_main.py  sofa_vs_real.py  utils.py
1dof_robot/functions/: elastic_term.m  elastic_term_epsilon.m  force_model.m  force_model_epsilon.m
1dof_robot/tests/: color_detection.py
camera/: format_dataset.py  test_yolo.py  train_yolo.py
camera/object_detection/: YOLOv3.py
camera/object_detection_YOLOv3/: YOLOv3Tiny.py  config.py  dataset.py  realtime.py
control/: README.md  loaded_state.txt  main.py
controllers/sensors/daq/cpp/: CMakeLists.txt
data collection/: get_images.py  set_labels.py  setup_labelImg.py
data_collection/: get_images.py  set_labels.py
notes/: goals.md  setup.md  sofa.sh
object_detection/: YOLOv3.py  YOLOv3Tiny.py  config.py  dataset.py  loss.py  model.py  realtime.py  test.py  train.py  utils.py
roboclaw_python/: roboclaw_position.py  roboclaw_simplepwm.py
script/: README.md  create_spring.py  create_wall.py  extract_dicom.py  finger.py  format_3d.py  generate_1dof_CAD.py  generate_body.py  generate_cavity.py  generate_mesh.py  generate_skull_stl.txt  get_data.py  load_data.scn  main.py  main_1dof.py  multiPressureController.py  path_navigation.py  pressureController.py  runSofa.ini  series_1_volume.mhd  set_FS_frame.py  skull.msh  skull.stl  visualize_3d.py
sim/: .gitmodules  README.md
sim/sofa/ext_plugin_repo/MyPlugin/: CMakeLists.txt
sofa/ext_plugin_repo/: CMakeLists.txt
src/: KeyboardController.py
tests/: pt_GPU.py  test.py  test_ultralytics.py  tf_GPU.py
utils/: speed_control.py
vision/: .gitignore  yolo_terminal.txt
(+4189 files in other folders)
